@@ -253,3 +253,4 @@ Release 2.7.0
 * SQL Area and View editor are not syntax highlighted
 * Implemented FR 2895576 [ERDesignerNG] TableSelectEditor devide tables from views
 * Implemented FR 3158981 [ERDesignerNG] Add SQL Browser the the UI
+* Bug Fixing 3056071 [ERDesignerNG] postgres unkown datatype prevent reverse eng.
